--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "recharts": "^2.13.0"
+    "recharts": "^2.13.0",
+    "uuid": "^11.0.1"
   },
   "devDependencies": {
     "daisyui": "^4.12.13",
